# crispy

./: .gitignore  Cargo.toml  DIARIZATION-FIX-SUMMARY.md  Makefile  PLUGIN_INSTALL_FIX.md  README.md  VIRTUAL_MIC.md  collect_diarization_code.sh  diarization_prompt.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: FUNDING.yml  SECRETS.md
.github/workflows/: build-test.yml  build.yml  lint.yml  pr-test-build.yml  release.yml  test-signing-key.yml
crates/virtual_mic_ipc/: Cargo.toml  crispy_virtual_mic.h
crates/virtual_mic_ipc/examples/: tone_writer.rs
crates/virtual_mic_ipc/src/: lib.rs
docs/plans/: 2026-02-13-transcription-progress-cancel-design.md
macos/virtual-mic/: Cargo.toml  Info.plist  Makefile  exports.txt
macos/virtual-mic/src/: lib.rs  plugin.h  plugin.m
scripts/: tray_icon.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  audio.rs  audio_engine.rs  llm_settings.rs  main.rs  paths.rs  recording.rs  recording_commands.rs  settings.rs  system_input_volume.rs  window.rs  windows_audio.rs
src-tauri/src/commands/: audio.rs  convert.rs  mod.rs  models.rs  ns_models.rs  permissions.rs  recording.rs  settings.rs  transcription.rs
src-tauri/src/managers/: diarization.rs  mod.rs  model.rs  transcription.rs
src/components/: PermissionsOnboarding.tsx  Sidebar.tsx  TranscriptionResultView.tsx  TrayPopupView.tsx
src/components/convert/: ConvertView.tsx
src/components/footer/: Footer.tsx  FooterModelSelector.tsx  UpdateChecker.tsx
src/components/icons/: CrispyTextLogo.tsx  HandyTextLogo.tsx  ResetIcon.tsx
src/components/model-selector/: ModelSelector.tsx
src/components/settings/: AppSelector.tsx  AutostartToggle.tsx  DiarizationToggle.tsx  LlmConfig.tsx  LlmSettings.tsx  MicrophoneSelector.tsx  MicrophoneVolume.tsx  NoiseModelSelector.tsx  OutputDeviceSelector.tsx  RecordingControls.tsx  RecordingsDirectory.tsx  SettingsPage.tsx  TranscriptionModelSelector.tsx  VirtualMicStatus.tsx  index.ts
src/components/settings/about/: AboutSettings.tsx
src/components/settings/general/: GeneralSettings.tsx
src/components/settings/recordings/: RecordingsHistory.tsx
src/components/ui/: AudioPlayer.tsx  Dropdown.tsx  PathDisplay.tsx  SettingContainer.tsx  Slider.tsx
src/hooks/: useBlackHoleStatus.ts  usePermissions.ts  useSettings.ts  useTauriListen.ts  useTranscriptionModels.ts  useTranscriptionProgress.ts
src/lib/utils/: format.test.ts  format.ts  models.test.ts  models.ts
src/test/: setup.ts
