[package]
name = "Crispy"
version = "0.1.0"
description = "Crispy"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
cpal = "0.17.1"
hound = "3.5"
chrono = "0.4"
anyhow = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
rubato = "0.16"
transcribe-rs = { version = "0.2.2", features = ["whisper", "parakeet", "moonshine"] }
log = "0.4"
urlencoding = "2"
async-openai = "0.28"
tokio = { version = "1", features = ["full"] }
ort = "=2.0.0-rc.10"
ort-sys = "=2.0.0-rc.10"
# Noise suppression: RNNoise port (path to ./rnnnoise in project root)
nnnoiseless = "0.5.2"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
