[package]
name = "Crispy"
version = "0.3.1"
description = "Crispy"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
cpal = "0.17.1"
hound = "3.5"
chrono = "0.4"
anyhow = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
rubato = "0.16"
transcribe-rs = { version = "0.2.2", features = ["whisper", "parakeet", "moonshine"] }
log = "0.4"
urlencoding = "2"
async-openai = "0.28"
tokio = { version = "1", features = ["full"] }
ort = "=2.0.0-rc.10"
ort-sys = "=2.0.0-rc.10"
# Noise suppression: RNNoise port (path to ./rnnnoise in project root)
nnnoiseless = "0.5.2"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
objc2 = "0.6"
objc2-app-kit = "0.3"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
screencapturekit = "1.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com",
    "Win32_Security",
] }
windows-core = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
