[package]
name = "Crispy"
version = "0.7.0"
description = "Crispy"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
cpal = "0.17.1"
hound = "3.5"
chrono = "0.4"
anyhow = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
rubato = "0.16"
# 0.3.x unified SpeechModel API; "onnx" enables Parakeet/Moonshine/GigaAM/SenseVoice/
# Canary/Cohere, "whisper-cpp" the CPU whisper.cpp backend. Requires ort rc.12.
transcribe-rs = { version = "0.3.11", features = ["whisper-cpp", "onnx"] }
log = "0.4"
urlencoding = "2"
async-openai = "0.28"
tokio = { version = "1", features = ["full"] }
# Bumped rc.10 -> rc.12 to match transcribe-rs 0.3 (ort-sys `links = "onnxruntime"`
# forbids two versions in one binary). pyannote-rs uses a caret req and accepts rc.12.
ort = { version = "=2.0.0-rc.12", features = ["ndarray"] }
ort-sys = "=2.0.0-rc.12"
# Noise suppression: RNNoise port (path to ./rnnnoise in project root)
nnnoiseless = "0.5.2"
# Speaker diarization (feature-gated, OFF by default). Runs the segmentation +
# WeSpeaker CAM++ ONNX models on the IN-TREE ort rc.12 (no more pyannote-rs, which
# pinned the incompatible ort rc.10). knf-rs = kaldi fbank features (no ort dep);
# nalgebra = pure-Rust symmetric eigendecomposition for NME-SC spectral clustering.
knf-rs = { version = "0.3", optional = true }
nalgebra = { version = "0.33", optional = true }
ndarray = "0.17"
eyre = "0.6"

[features]
# Diarization is ON by default again now that it runs on ort rc.12 (in-house embedding
# + NME-SC). Build with `--no-default-features` for a leaner binary without it.
default = ["diarization"]
diarization = ["dep:knf-rs", "dep:nalgebra"]

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
objc2 = "0.6"
objc2-app-kit = "0.3"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
screencapturekit = "1.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
windows62 = { package = "windows", version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Security",
] }
windows-core = "=0.62.2"
windows-implement = "=0.60.2"

# [profile.release] moved to the workspace ROOT Cargo.toml — Cargo ignores
# profile settings declared in workspace members.
