[package]
name = "crispy_virtual_mic_plugin"
version = "0.1.0"
edition = "2021"
description = "CoreAudio AudioServerPlugIn for Crispy virtual microphone"

[dependencies]
virtual_mic_ipc = { path = "../../crates/virtual_mic_ipc" }
libc = "0.2"

[lib]
crate-type = ["staticlib"]
name = "crispy_virtual_mic_core"
